Revert "Fixing MediaPost option visibility"
This reverts commit dd23666539cec40ba2de3be356aa4fc18e4e4fda.

--- a/src/MediaPost.css
+++ b/src/MediaPost.css
@@ -180,8 +180,8 @@
     color: rgb(248, 247, 247);
     width: 10%;
     height: 10%;
-    padding: 3%;
-    background: rgba(22, 22, 22, 0.767);
+    padding: 2%;
+    background: rgba(255, 255, 255, 0.233);
     border-radius: 50%;
 }
 
